   1. New chants: Phosphorescence
   2. Anarchy clan govt type now has Clan Experience spell as an instant benefit.
   3. Pirates no longer regain lost limbs after death.
   4. New resource: DIRT.  Mass Grave now populates its room with the stuff.
   5. GModify now supports query-able stat "CLASSTYPE"
   6. New Skills: Wilderness Sounds, Hardiness, Stonecunning, Keenvision, Burrow Hide
   7. New Skills: Cultural Adaptation, Fast Slinging
   8. New Prayers: Taint of Evil
   9. Centaur gets Hardiness, Drow adds Light Sensitivity and Taint of Evil, 
   10. Duergar get -10% XP, Dwarfs get Stonecunning, Elfs Keenvision
   11. Races can now have a XP adjustment, see Archon's Guide
   12. New Language: WormSpeak
   13. New Chants: BurrowSpeak
   14. Gnomes get BurrowSpeak and Burrow Hide, Goblins +5% XP, Half Elfs Cultural Adaptation
   15. Racial cultural abilities now support level and auto-gain/qualify.
   16. New Spells: Darkness Globe
   17. Achievement type GOTITEM now supports NUM argument.
   18. New Property: Prop_OpenCommand
   19. ZapperMask now supports IFSTAT, CLASSTYPE, SUBNAME, WEAPONTYPE, WEAPONCLASS, WEAPONAMMO
   20. New Skills, Proficiencies for overriding Class Restrictions. 14 in total.
# Build 5.9.4 Released 08/03/2016
   1. Qualify now shows language limits
   2. New Prop_NoTeleport exceptions
   3. ALIAS commands now supports "noecho" prefix to prevent echos.
   4. New property: Prop_HereEnabler, like the other Prop_Here* and Prop_*Enabler props.
   5. New Archon ability: Matrix Possess
   6. Common Skills now support INFO argument to get info on recipe items.
   7. New Area type: SubThinInstance, for making thin instance clones of existing areas.
   8. EQUIP LONG now shows all items being worn and tattoos, even at other layers.
   9. CoffeeMud now supports Twitter.  See the end of the Installation Guide.
  10. Prop_StatTrainer has new parameter: BASEVALUE, for making it more flexible.