@@ -391,6 +391,11 @@ Usage    : DYE [ITEM NAME] [COLOR]\n\r\
 Example  : dye shirt blue\n\r\
 This skill allows the player to dye a qualifying cloth item a different color.
 
+EDUCATION_LORE=EDUCATIONLORE
+EDUCATIONLORE=<ABILITY>\
+Those with this ability is adept at learning, and gains an additional practice point \
+every level.
+
 EMBROIDER=EMBROIDERING
 EMBROIDERING=<ABILITY>\
 Usage    : EMBROIDER [ITEM NAME] [MESSAGE]\n\r\
